<?xml version="1.0"?>
<package>
  <name>baxter_builder</name>
  <version>1.0.0</version>
  <description>Pick n Place</description>

  <maintainer email="ktran130596@gmail.com">Kiet Tran</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>baxter_maintenance_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>baxter_tools</build_depend>
  <build_depend>baxter_gazebo</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_maintenance_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>baxter_gazebo</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roslaunch</run_depend>
  
  <export>
  	<gazebo_ros gazebo_model_path="${prefix}/models"/>
  	<gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
